// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionItem should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConnectionsItem
    isConnected={true}
    isLoading={false}
    name="fitbit"
    onPress={[MockFunction]}
    onPressInfo={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
              "paddingLeft": 20,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 32,
                  }
                }
              >
                fitbit
              </YuText>
              <Image
                source={1}
                style={
                  Object {
                    "height": 32,
                    "marginLeft": 16,
                    "width": 32,
                  }
                }
              />
            </TouchableOpacity>
          </View>
        </View>,
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <Switch
            onValueChange={[MockFunction]}
            thumbColor={null}
            trackColor={
              Object {
                "false": "rgb(230,230,230)",
                "true": "rgb(232, 49, 129)",
              }
            }
            value={true}
          />
        </View>,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingVertical": 28,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 32,
                    }
                  }
                >
                  fitbit
                </YuText>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 32,
                      "marginLeft": 16,
                      "width": 32,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
            undefined,
            false,
          ],
          "style": Object {
            "flex": 1,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 32,
                    }
                  }
                >
                  fitbit
                </YuText>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 32,
                      "marginLeft": 16,
                      "width": 32,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Object {
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  <YuText
                    style={
                      Object {
                        "fontFamily": "Bariol-Regular",
                        "fontSize": 32,
                      }
                    }
                  >
                    fitbit
                  </YuText>,
                  <Image
                    source={1}
                    style={
                      Object {
                        "height": 32,
                        "marginLeft": 16,
                        "width": 32,
                      }
                    }
                  />,
                ],
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "fitbit",
                    "style": Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 32,
                    },
                  },
                  "ref": null,
                  "rendered": "fitbit",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": 1,
                    "style": Object {
                      "height": 32,
                      "marginLeft": 16,
                      "width": 32,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          undefined,
          false,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Switch
            onValueChange={[MockFunction]}
            thumbColor={null}
            trackColor={
              Object {
                "false": "rgb(230,230,230)",
                "true": "rgb(232, 49, 129)",
              }
            }
            value={true}
          />,
          "style": Object {
            "alignItems": "flex-end",
            "flex": 1,
            "justifyContent": "center",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onValueChange": [MockFunction],
            "thumbColor": null,
            "trackColor": Object {
              "false": "rgb(230,230,230)",
              "true": "rgb(232, 49, 129)",
            },
            "value": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 32,
                    }
                  }
                >
                  fitbit
                </YuText>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 32,
                      "marginLeft": 16,
                      "width": 32,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
          </View>,
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Switch
              onValueChange={[MockFunction]}
              thumbColor={null}
              trackColor={
                Object {
                  "false": "rgb(230,230,230)",
                  "true": "rgb(232, 49, 129)",
                }
              }
              value={true}
            />
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingVertical": 28,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "marginBottom": 20,
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <YuText
                    style={
                      Object {
                        "fontFamily": "Bariol-Regular",
                        "fontSize": 32,
                      }
                    }
                  >
                    fitbit
                  </YuText>
                  <Image
                    source={1}
                    style={
                      Object {
                        "height": 32,
                        "marginLeft": 16,
                        "width": 32,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
              undefined,
              false,
            ],
            "style": Object {
              "flex": 1,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <YuText
                    style={
                      Object {
                        "fontFamily": "Bariol-Regular",
                        "fontSize": 32,
                      }
                    }
                  >
                    fitbit
                  </YuText>
                  <Image
                    source={1}
                    style={
                      Object {
                        "height": 32,
                        "marginLeft": 16,
                        "width": 32,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Object {
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": Array [
                    <YuText
                      style={
                        Object {
                          "fontFamily": "Bariol-Regular",
                          "fontSize": 32,
                        }
                      }
                    >
                      fitbit
                    </YuText>,
                    <Image
                      source={1}
                      style={
                        Object {
                          "height": 32,
                          "marginLeft": 16,
                          "width": 32,
                        }
                      }
                    />,
                  ],
                  "onPress": [MockFunction],
                  "style": Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "fitbit",
                      "style": Object {
                        "fontFamily": "Bariol-Regular",
                        "fontSize": 32,
                      },
                    },
                    "ref": null,
                    "rendered": "fitbit",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": 1,
                      "style": Object {
                        "height": 32,
                        "marginLeft": 16,
                        "width": 32,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            undefined,
            false,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Switch
              onValueChange={[MockFunction]}
              thumbColor={null}
              trackColor={
                Object {
                  "false": "rgb(230,230,230)",
                  "true": "rgb(232, 49, 129)",
                }
              }
              value={true}
            />,
            "style": Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onValueChange": [MockFunction],
              "thumbColor": null,
              "trackColor": Object {
                "false": "rgb(230,230,230)",
                "true": "rgb(232, 49, 129)",
              },
              "value": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ConnectionItem should render item a loading indicator 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConnectionsItem
    isConnected={true}
    isLoading={true}
    name="fitbit"
    onPress={[MockFunction]}
    onPressInfo={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
              "paddingLeft": 20,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 32,
                  }
                }
              >
                fitbit
              </YuText>
              <Image
                source={1}
                style={
                  Object {
                    "height": 32,
                    "marginLeft": 16,
                    "width": 32,
                  }
                }
              />
            </TouchableOpacity>
          </View>
        </View>,
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="rgb(227,13,118)"
            hidesWhenStopped={true}
            size="small"
          />
        </View>,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingVertical": 28,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 32,
                    }
                  }
                >
                  fitbit
                </YuText>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 32,
                      "marginLeft": 16,
                      "width": 32,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
            undefined,
            false,
          ],
          "style": Object {
            "flex": 1,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 32,
                    }
                  }
                >
                  fitbit
                </YuText>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 32,
                      "marginLeft": 16,
                      "width": 32,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Object {
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  <YuText
                    style={
                      Object {
                        "fontFamily": "Bariol-Regular",
                        "fontSize": 32,
                      }
                    }
                  >
                    fitbit
                  </YuText>,
                  <Image
                    source={1}
                    style={
                      Object {
                        "height": 32,
                        "marginLeft": 16,
                        "width": 32,
                      }
                    }
                  />,
                ],
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "fitbit",
                    "style": Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 32,
                    },
                  },
                  "ref": null,
                  "rendered": "fitbit",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": 1,
                    "style": Object {
                      "height": 32,
                      "marginLeft": 16,
                      "width": 32,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          undefined,
          false,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ActivityIndicator
            animating={true}
            color="rgb(227,13,118)"
            hidesWhenStopped={true}
            size="small"
          />,
          "style": Object {
            "alignItems": "flex-end",
            "flex": 1,
            "justifyContent": "center",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animating": true,
            "color": "rgb(227,13,118)",
            "hidesWhenStopped": true,
            "size": "small",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 32,
                    }
                  }
                >
                  fitbit
                </YuText>
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 32,
                      "marginLeft": 16,
                      "width": 32,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
          </View>,
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="rgb(227,13,118)"
              hidesWhenStopped={true}
              size="small"
            />
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingVertical": 28,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "marginBottom": 20,
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <YuText
                    style={
                      Object {
                        "fontFamily": "Bariol-Regular",
                        "fontSize": 32,
                      }
                    }
                  >
                    fitbit
                  </YuText>
                  <Image
                    source={1}
                    style={
                      Object {
                        "height": 32,
                        "marginLeft": 16,
                        "width": 32,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
              undefined,
              false,
            ],
            "style": Object {
              "flex": 1,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <YuText
                    style={
                      Object {
                        "fontFamily": "Bariol-Regular",
                        "fontSize": 32,
                      }
                    }
                  >
                    fitbit
                  </YuText>
                  <Image
                    source={1}
                    style={
                      Object {
                        "height": 32,
                        "marginLeft": 16,
                        "width": 32,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Object {
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": Array [
                    <YuText
                      style={
                        Object {
                          "fontFamily": "Bariol-Regular",
                          "fontSize": 32,
                        }
                      }
                    >
                      fitbit
                    </YuText>,
                    <Image
                      source={1}
                      style={
                        Object {
                          "height": 32,
                          "marginLeft": 16,
                          "width": 32,
                        }
                      }
                    />,
                  ],
                  "onPress": [MockFunction],
                  "style": Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "fitbit",
                      "style": Object {
                        "fontFamily": "Bariol-Regular",
                        "fontSize": 32,
                      },
                    },
                    "ref": null,
                    "rendered": "fitbit",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": 1,
                      "style": Object {
                        "height": 32,
                        "marginLeft": 16,
                        "width": 32,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            undefined,
            false,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ActivityIndicator
              animating={true}
              color="rgb(227,13,118)"
              hidesWhenStopped={true}
              size="small"
            />,
            "style": Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animating": true,
              "color": "rgb(227,13,118)",
              "hidesWhenStopped": true,
              "size": "small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
